loader aware class and method caches (fingers crossed)